ctm-sf-homeloan-app/main/default/objects/RelatedParty__c/RelatedParty__c.object-meta.xml
<CustomObject>
    <label>Related Party</label>
    <nameField>
        <label>Related Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>