ctm-sf-homeloan-app/main/default/objects/RelatedParty__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Parties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>