ctm-sf-homeloan-app/main/default/objects/RelatedParty__c/fields/ApplicantFirstName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantFirstName__c</fullName>
    <formula>Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant First Name</label>
    <type>Text</type>
</CustomField>