ctm-sf-homeloan-app/main/default/objects/RelatedParty__c/fields/ApplicantLastName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantLastName__c</fullName>
    <formula>Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Last Name</label>
    <type>Text</type>
</CustomField>