ctm-sf-homeloan-app/main/default/objects/RelatedParty__c/fields/MobileMasked__c.field-meta.xml
<CustomField>
    <fullName>MobileMasked__c</fullName>
    <formula>If(!isBlank(Mobile__c), &apos;**** *** &apos;+ RIGHT(Mobile__c, 3), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Masked</label>
    <type>Text</type>
</CustomField>