ctm-sf-homeloan-app/main/default/objects/RelatedParty__c/fields/UploadDocURL__c.field-meta.xml
<CustomField>
    <fullName>UploadDocURL__c</fullName>
    <label>Upload Doc URL</label>
    <type>Url</type>
</CustomField>